unpackaged/main/default/objects/Stage_Definition__mdt/Stage_Definition__mdt.object-meta.xml
<CustomObject>
    <label>Stage Definition</label>
    <pluralLabel>Stage Definitions</pluralLabel>
</CustomObject>