unpackaged/main/default/objects/Stage_Definition__mdt/fields/Default_Probability__c.field-meta.xml
<CustomField>
    <fullName>Default_Probability__c</fullName>
    <label>Default Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>