unpackaged/main/default/objects/Stage_Definition__mdt/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <label>Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>