unpackaged/main/default/objects/Stage_Definition__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed/Won</fullName>
            </value>
            <value>
                <fullName>Closed/Lost</fullName>
            </value>
            <value>
                <fullName>Closed/Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>